# ngine

./: .gitignore  CMakeLists.txt  Makefile  README.md
cmake/: LICENCE
src/: Application.cpp  Logger.h  Renderer.cpp  Renderer.h  Window.cpp  Window.h  logger.h  main.cpp  window.cpp  window.h
src/Core/: Application.cpp  Application.h  Window.cpp  Window.h
src/Render/: ArrayBuffer.cpp  ArrayBuffer.h  IndexBuffer.cpp  IndexBuffer.h  RenderCalls.cpp  RenderCalls.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  VertexBuffer.cpp  VertexBuffer.h  VertexLayout.h
